[package]
name = "etalia"
version = "0.1.0"
authors = [
	"Samantha Nguyen, <contact@samanthanguyen.me>"
]
description = "a parser and formatter for citations"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"
keywords = [
	"citations",
	"bibliography",
]
categories = [
	"parser-implementations",
	"text-processing",
	"value-formatting",
]
exclude = [
	".devcontainer",
	".github",
	".vscode",
	".idea",
	"deny.toml",
	".commitlintrc.json",
	"package.json",
	"package-lock.json",
	"fuzz",
	"book",
	"benches",
]

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.50"
url = "2.5.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
iai = "0.1.0"

# criterion benchmarks
[[bench]]
path = "benches/criterion/fibb.rs"
name = "criterion_fibb"
harness = false

# iai benchmarks
[[bench]]
path = "benches/iai/fibb.rs"
name = "iai_fibb"
harness = false
